--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
+    "react-in-viewport": "^1.0.0-alpha.17",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0"
   }
